--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
         </repository>
 
         <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+        </repository>
+
+        <repository>
             <id>everything</id>
             <url>http://repo.citizensnpcs.co/</url>
         </repository>
@@ -128,9 +133,9 @@
 
         <!-- Parties -->
         <dependency>
-            <groupId>com.github.AlessioDP.Parties</groupId>
+            <groupId>com.alessiodp.parties</groupId>
             <artifactId>parties-api</artifactId>
-            <version>2.5.1</version>
+            <version>2.6.14</version>
         </dependency>
 
         <!-- PluginConstructorAPI -->
