--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
             <id>codemc-repo</id>
             <url>https://repo.codemc.org/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>alessiodp-repo</id>
+            <url>https://repo.alessiodp.com/releases/</url>
+        </repository>
 
         <repository>
             <id>everything</id>
@@ -158,7 +162,7 @@
         <dependency>
             <groupId>com.alessiodp.parties</groupId>
             <artifactId>parties-api</artifactId>
-            <version>2.6.14</version>
+            <version>3.0.0-rc.1</version>
         </dependency>
 
         <!-- PluginConstructorAPI -->
