--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>1.1.176</version>
+    <version>1.1.177</version>
     <name>QualityArmory</name>
 
     <repositories>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.15-R0.1-SNAPSHOT</version>
+            <version>1.17-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -160,9 +160,9 @@
 
         <!-- Parties -->
         <dependency>
-            <groupId>com.alessiodp.parties</groupId>
+            <groupId>com.github.AlessioDP.Parties</groupId>
             <artifactId>parties-api</artifactId>
-            <version>3.0.0-rc.1</version>
+            <version>2.5.1</version>
         </dependency>
 
         <!-- PluginConstructorAPI -->
