--- a/src/main/java/me/zombie_striker/customitemmanager/pom.xml
+++ b/src/main/java/me/zombie_striker/customitemmanager/pom.xml
@@ -66,11 +66,10 @@
 
 
         <!--Spigot API-->
-        <!--You only need one of the two, don't put both. Spigot is recommended.-->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>LATEST</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -133,15 +132,6 @@
             <groupId>com.github.AlessioDP.Parties</groupId>
             <artifactId>parties-api</artifactId>
             <version>2.5.1</version>
-        </dependency>
-
-        <!-- PluginConstructorAPI -->
-        <dependency>
-            <groupId>me.zombie_striker</groupId>
-            <artifactId>pluginconstructor</artifactId>
-            <version>1.0.50</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/PluginConstructorAPI.jar</systemPath>
         </dependency>
 
         <!-- LightAPI -->
