--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -33,3 +33,4 @@ softdepend: [Vault, PlaceholderAPI, ChestShop, Parties, WorldGuard, ViaVersion, 
 authors:
   - Zombie_Striker
   - Lorenzo0111
+  - AlonsoAliaga
