--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,14 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <!-- <configuration>
+                    <outputDirectory>server/plugins</outputDirectory>
+                </configuration> -->
+            </plugin>
+            <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
