--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Towny -->
+        <dependency>
+            <groupId>com.github.TownyAdvanced</groupId>
+            <artifactId>Towny</artifactId>
+            <version>0.97.2.13</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- ViaVersion API -->
         <dependency>
             <groupId>us.myles</groupId>
