--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,6 @@
         </repository>
 
         <repository>
-            <id>sk89q-repo</id>
-            <url>http://maven.sk89q.com/repo/</url>
-        </repository>
-
-        <repository>
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
         </repository>
@@ -144,12 +139,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- WorldGuard API -->
+        <!-- WorldGuard Wrapper -->
         <dependency>
-            <groupId>com.sk89q.worldguard</groupId>
-            <artifactId>worldguard-legacy</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>org.codemc.worldguardwrapper</groupId>
+            <artifactId>worldguardwrapper</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
 
         <!-- Towny -->
@@ -171,7 +165,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.10</version>
+            <version>2.11.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -198,6 +192,13 @@
             <version>3.12</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/ChestShop.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.maxgamer</groupId>
+            <artifactId>QuickShop</artifactId>
+            <version>5.1.0.2</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -318,6 +319,10 @@
                         <relocation>
                             <pattern>com.cryptomorin.xseries</pattern>
                             <shadedPattern>me.zombie_striker.qg.xseries</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.codemc.worldguardwrapper</pattern>
+                            <shadedPattern>me.zombie_striker.qg.hooks.protection.worldguard</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
