--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -11,7 +11,7 @@ body:
     id: confirm
     attributes:
       label: Confirmations
-      description: By submitting this issue, you confirm that:
+      description: By submitting this issue, you confirm that
       options:
         - label: I am using the latest plugin version with the required dependencies.
           required: true
