--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -34,13 +34,13 @@ body:
     validations:
       required: true
   - type: input
-    id: gun
+    id: plugins
     attributes:
       label: Plugins
       description: If you think that's relevant, please send your plugins list
       placeholder: Plugin1, Plugin2..
     validations:
-      required: false
+      required: true
   - type: input
     id: server
     attributes:
