--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <version>2.0.6-SNAPSHOT</version>
     <name>QualityArmory</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <repositories>
 
 
