--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.6</version>
+    <version>2.0.7</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -199,8 +199,7 @@
             <groupId>com.acrobot.chestshop</groupId>
             <artifactId>chestshop</artifactId>
             <version>3.12</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/ChestShop.jar</systemPath>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
