--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,13 @@
             <version>0.8.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.TechFortress</groupId>
+            <artifactId>GriefPrevention</artifactId>
+            <version>16.18</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
