--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.8</version>
+    <version>2.0.8.1</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -198,9 +198,8 @@
 
         <dependency>
             <groupId>de.tr7zw</groupId>
-            <artifactId>item-nbt-api-plugin</artifactId>
-            <version>2.11.0</version>
-            <scope>provided</scope>
+            <artifactId>item-nbt-api</artifactId>
+            <version>2.11.1</version>
         </dependency>
 
         <dependency>
@@ -374,6 +373,10 @@
                         <relocation>
                             <pattern>org.codemc.worldguardwrapper</pattern>
                             <shadedPattern>me.zombie_striker.qg.hooks.protection.worldguard</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.tr7zw.changeme.nbtapi</pattern>
+                            <shadedPattern>me.zombie_striker.qg.nbt</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
