--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -17,4 +17,4 @@ jobs:
           days-before-stale: 7
           days-before-close: 30
           stale-issue-label: 'status: stale'
-          exempt-issue-labels: 'enhancement,status: accepted,status: needs triage,priority: future,question'
+          only-labels: 'status: waiting'
