--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,9 @@
             <version>1.0.20</version>
             <scope>provided</scope>
         </dependency>
-  -->       <dependency>
+  -->   <dependency>
             <groupId>ca.bkaw.nms</groupId>
-            <artifactId>forktest-nms</artifactId>
+            <artifactId>dev-bundle</artifactId>
             <version>1.20.6-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -351,7 +351,7 @@
                 <configuration>
                     <devBundle>
                         <!-- The artifact id of the resulting dependency -->
-                        <id>forktest-nms</id>
+                        <id>dev-bundle</id>
                         <!-- The repository to download the dev-bundle from -->
                         <repository>
                             <id>myrepo</id>
