--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -81,7 +81,7 @@ weaponlimiter_primaries: 2
 weaponlimiter_secondaries: 2
 enableCrafting: true
 enableShop: true
-AUTO-UPDATE: true
+AUTO-UPDATE: false
 Swap-Reload-and-Shooting-Controls: false
 Order-Shop-By-Price: false
 enable_lore_gun-info_messages: true
