--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,12 +9,18 @@
     "docwriter.progress.trackClasses": true,
     "yaml.schemas": {
         "https://json.schemastore.org/bukkit-plugin.json": "file:///c%3A/projetos/eventosIG/src/main/resources/plugin.yml"
-    },"java.configuration.runtimes": [
-        
+    },
+    "java.configuration.runtimes": [
         {
             "name": "JavaSE-21", // replace version by 8, 11 or 17
             "path": "C:\\JBR-21\\",
-
-          },
-    ]
+        },
+    ],
+    "java.maxConcurrentBuilds": 4,
+    "java.maven.downloadSources": false,
+    "maven.executable.options": "-Xlint:deprecation -Xlint:-deprecation",
+    "java.jdt.ls.vmargs": "-Xlint:deprecation -Xlint:-deprecation"
+    
+   
+    
 }
