add try catch to fix nonsense spam in console

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "java.compile.nullAnalysis.mode": "disabled",
+    "java.compile.nullAnalysis.mode": "automatic",
     "java.format.settings.url": ".vscode/java-formatter.xml",
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.enabled": false,
